<resources>
    <string name="app_name">TicTacToe</string>

    <!--AndroidManifest.xml -->
    <string name="first_activity_title">Rock Scissor Paper</string>
    <string name="second_activity_title">Tic Tac Toe</string>
    <string name="tttgame_activity_title">Tic Tac Toe</string>
    <string name="setting_menu_title">Setting</string>
    <string name="about_menu_title">About</string>

    <!--first_fragment.xml -->
    <string name="go_to_button">Next</string>
    <string name="rps_choice_text"/>
    <string name="compuer_choice_text_label">Computer choice: </string>
    <string name="rps_play_button">Play</string>
    <string name="winner_text"/>
    <string name="winner_text_label">Winner:</string>

    <!-- about_activity -->
    <string name="about_menu_head">* Welcome *</string>
    <string name="about_menu_p1">1) Set player name on Setting menu</string>
    <string name="about_menu_p2">2) Enter rock, paper, or scissor to play the game</string>
    <string name="about_menu_p3">3) Then, press [NEXT] button</string>
    <string name="about_menu_p4">4) Ignore rating until you go play tic tac toe</string>
    <string name="about_menu_p5">5) Go play the Tic Tac Toe</string>

    <!-- menu.xml -->
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <!-- preference.xml -->
    <string name="set_player_name_category">Set Name</string>
    <string name="edit_player_name_title">Set player name</string>
    <string name="show_images"></string>
    <string name="player_name_label">Player Name:</string>
    <string name="player_name"/>

    <!-- second_fragment.xml -->
    <string name="goto_tttgame_buttoon">Play Tic Tac Toe</string>
    <string name="rating_text_label">Rate</string>
    <string name="rate_about_text">* Please rate the game</string>
    <string name="show_winner_label">Winner of the Rock Paper Scissors :</string>
    <string name="show_winner"/>
    <string name="toggle_text">Press the button</string>

    <!-- ttgame_activity -->
    <string name="win_count_text_view">Check win counts</string>
    <string-array name="count_array">
        <item>Choose</item>
        <item>Player</item>
        <item>Computer</item>
    </string-array>



</resources>
