<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#e9e5ea"
                tools:context=".AboutActivity" >


    <LinearLayout
        android:id="@+id/aboutMenuTextLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/aboutMenuHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:background="#f4b492"
            android:paddingLeft="95sp"
            android:paddingTop="21sp"
            android:text="@string/about_menu_head"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/aboutMenuP1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/about_menu_p1"
            android:textAlignment="center"
            android:textColor="#635e5c"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/aboutMenuP2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/about_menu_p2"
            android:textAlignment="center"
            android:textColor="#635e5c"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/aboutMenuP3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/about_menu_p3"
            android:textAlignment="center"
            android:textColor="#635e5c"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/aboutMenuP4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/about_menu_p4"
            android:textAlignment="center"
            android:textColor="#635e5c"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/aboutMenuP5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/about_menu_p5"
            android:textAlignment="center"
            android:textColor="#635e5c"
            android:textSize="20sp"/>

    </LinearLayout>
</RelativeLayout>